// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serverless generator should setup deno-deploy project 1`] = `
Object {
  "$schema": "../node_modules/nx/schemas/project-schema.json",
  "name": "my-deno-deploy-app",
  "projectType": "application",
  "root": "my-deno-deploy-app",
  "sourceRoot": "my-deno-deploy-app/src",
  "tags": Array [],
  "targets": Object {
    "build": Object {
      "executor": "@nx/deno:emit",
      "options": Object {
        "denoConfig": "my-deno-deploy-app/deno.json",
        "main": "my-deno-deploy-app/src/main.ts",
        "outputFile": "dist/my-deno-deploy-app/main.js",
      },
      "outputs": Array [
        "dist/my-deno-deploy-app",
      ],
    },
    "deploy": Object {
      "configurations": Object {
        "preview": Object {
          "command": "deployctl deploy --project=<Your-Deno-Deploy-Project-Name> --import-map=import_map.json --exclude=node_modules my-deno-deploy-app/src/main.ts",
        },
        "production": Object {
          "command": "deployctl deploy --project=<Your-Deno-Deploy-Project-Name> --import-map=import_map.json --exclude=node_modules --prod my-deno-deploy-app/src/main.ts",
        },
      },
      "executor": "nx:run-commands",
      "options": Object {
        "command": "deployctl deploy --project=<Your-Deno-Deploy-Project-Name> --import-map=import_map.json --exclude=node_modules  my-deno-deploy-app/src/main.ts --dry-run",
      },
    },
    "lint": Object {
      "executor": "@nx/deno:lint",
      "options": Object {
        "denoConfig": "my-deno-deploy-app/deno.json",
      },
    },
    "serve": Object {
      "executor": "@nx/deno:run",
      "options": Object {
        "buildTarget": "my-deno-deploy-app:build",
      },
    },
    "test": Object {
      "executor": "@nx/deno:test",
      "options": Object {
        "coverageDirectory": "coverage/my-deno-deploy-app",
        "denoConfig": "my-deno-deploy-app/deno.json",
      },
      "outputs": Array [
        "coverage/my-deno-deploy-app",
      ],
    },
  },
}
`;

exports[`serverless generator should setup empty project 1`] = `
Object {
  "$schema": "../node_modules/nx/schemas/project-schema.json",
  "name": "my-plain-app",
  "projectType": "application",
  "root": "my-plain-app",
  "sourceRoot": "my-plain-app/src",
  "tags": Array [],
  "targets": Object {
    "build": Object {
      "executor": "@nx/deno:emit",
      "options": Object {
        "denoConfig": "my-plain-app/deno.json",
        "main": "my-plain-app/src/main.ts",
        "outputFile": "dist/my-plain-app/main.js",
      },
      "outputs": Array [
        "dist/my-plain-app",
      ],
    },
    "deploy": Object {
      "executor": "nx:run-commands",
      "options": Object {
        "command": "echo \\"TODO configure deploy target\\"",
      },
    },
    "lint": Object {
      "executor": "@nx/deno:lint",
      "options": Object {
        "denoConfig": "my-plain-app/deno.json",
      },
    },
    "serve": Object {
      "executor": "@nx/deno:run",
      "options": Object {
        "buildTarget": "my-plain-app:build",
      },
    },
    "test": Object {
      "executor": "@nx/deno:test",
      "options": Object {
        "coverageDirectory": "coverage/my-plain-app",
        "denoConfig": "my-plain-app/deno.json",
      },
      "outputs": Array [
        "coverage/my-plain-app",
      ],
    },
  },
}
`;

exports[`serverless generator should setup in --directory 1`] = `
Object {
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "nested-my-plain-app",
  "projectType": "application",
  "root": "nested/my-plain-app",
  "sourceRoot": "nested/my-plain-app/src",
  "tags": Array [],
  "targets": Object {
    "build": Object {
      "executor": "@nx/deno:emit",
      "options": Object {
        "denoConfig": "nested/my-plain-app/deno.json",
        "main": "nested/my-plain-app/src/main.ts",
        "outputFile": "dist/nested/my-plain-app/main.js",
      },
      "outputs": Array [
        "dist/nested/my-plain-app",
      ],
    },
    "deploy": Object {
      "executor": "nx:run-commands",
      "options": Object {
        "command": "echo \\"TODO configure deploy target\\"",
      },
    },
    "lint": Object {
      "executor": "@nx/deno:lint",
      "options": Object {
        "denoConfig": "nested/my-plain-app/deno.json",
      },
    },
    "serve": Object {
      "executor": "@nx/deno:run",
      "options": Object {
        "buildTarget": "nested-my-plain-app:build",
      },
    },
    "test": Object {
      "executor": "@nx/deno:test",
      "options": Object {
        "coverageDirectory": "coverage/nested/my-plain-app",
        "denoConfig": "nested/my-plain-app/deno.json",
      },
      "outputs": Array [
        "coverage/nested/my-plain-app",
      ],
    },
  },
}
`;

exports[`serverless generator should setup netlify project 1`] = `
Object {
  "$schema": "../node_modules/nx/schemas/project-schema.json",
  "name": "my-netlify-app",
  "projectType": "application",
  "root": "my-netlify-app",
  "sourceRoot": "my-netlify-app/src",
  "tags": Array [],
  "targets": Object {
    "deploy": Object {
      "configurations": Object {
        "production": Object {
          "command": "yarn netlify deploy --site=<Your-Netlify-Site-Name>",
          "cwd": "my-netlify-app",
        },
      },
      "executor": "nx:run-commands",
      "options": Object {
        "command": "yarn netlify deploy --site=<Your-Netlify-Site-Name>",
        "cwd": "my-netlify-app",
      },
    },
    "lint": Object {
      "executor": "@nx/deno:lint",
      "options": Object {
        "denoConfig": "my-netlify-app/deno.json",
      },
    },
    "serve": Object {
      "executor": "nx:run-commands",
      "options": Object {
        "command": "yarn netlify dev",
        "cwd": "my-netlify-app",
      },
    },
    "test": Object {
      "executor": "@nx/deno:test",
      "options": Object {
        "coverageDirectory": "coverage/my-netlify-app",
        "denoConfig": "my-netlify-app/deno.json",
      },
      "outputs": Array [
        "coverage/my-netlify-app",
      ],
    },
  },
}
`;
